@@ -28,37 +28,6 @@
 		<findbugs-maven-plugin.version>3.0.4</findbugs-maven-plugin.version>
 		<docker-maven-plugin.version>0.4.13</docker-maven-plugin.version>
 		<sonar.host.url>http://35.164.32.240:9000</sonar.host.url>
-		<maven.build.timestamp.format>MM.yyyy</maven.build.timestamp.format>
-		<yearMonth>${maven.build.timestamp}</yearMonth>    
-		<sonar.projectKey>MyProjectKey</sonar.projectKey>
-		<sonar.projectName>My Project</sonar.projectName>
-		 <sonar.projectVersion>${yearMonth}</sonar.projectVersion>
-		<sonar.language>java</sonar.language>
-		<sonar.sourceEncoding>UTF-8</sonar.sourceEncoding>
-		<sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
-		<!-- Jacoco version to use -->
-		<jacoco.version>0.7.2.201409121644</jacoco.version>
-		<!-- The Sonar Jacoco Listener for JUnit to extract coverage details per test -->
-		<sonar-jacoco-listeners.version>1.4</sonar-jacoco-listeners.version>
-		<!-- Don't let Sonar execute tests. We will ask it to Maven 'sonar.dynamicAnalysis' is deprecated since version 4.3 and should no longer be used. -->
-		<!-- <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis> -->
-		<!-- The system property jacoco.outputDir needs to be override on the command line
-			with an absolute path if you want to merge results from all modules.
-			Example in a Jenkisn build where ${WORKSPACE} is defined and your project in the root directory of the workspace :
-			mvn clean install -Prun-its,coverage -Djacoco.outputDir=${WORKSPACE}/target
-			Note that unfortunately using the following does not work because of
-			http://jira.codehaus.org/browse/SONAR-3427:
-		<jacoco.outputDir>${session.executionRootDirectory}/target/</jacoco.outputDir>
-		-->
-		<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
-		<!-- Jacoco output file for UTs -->
-		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
-		<!-- Tells Sonar where the Jacoco coverage result file is located for Unit Tests -->
-		<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
-		<!-- Jacoco output file for ITs -->
-		<jacoco.out.it.file>jacoco-it.exec</jacoco.out.it.file>
-		<!-- Tells Sonar where the Jacoco coverage result file is located for Integration Tests -->
-		<sonar.jacoco.itReportPath>${jacoco.outputDir}/${jacoco.out.it.file}</sonar.jacoco.itReportPath>
 	</properties>
 
 	<dependencies>
@@ -203,6 +172,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.10</version>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -240,96 +215,52 @@
 							</execution>
 						</executions>
 					</plugin>
-				</plugins>
-			</build>
-		</profile>
-		<profile>
-			<id>coverage</id>
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-surefire-plugin</artifactId>
-						<configuration>
-							<argLine>${jacoco.agent.ut.arg}</argLine>
-							<!-- Specific to generate mapping between tests and covered code -->
-							<properties>
-								<property>
-									<name>listener</name>
-									<value>org.sonar.java.jacoco.JUnitListener</value>
-								</property>
-							</properties>
-							<!-- test failure ignore -->
-							<testFailureIgnore>true</testFailureIgnore>
-						</configuration>
-					</plugin>
-					<plugin>
-						<groupId>org.apache.maven.plugins</groupId>
-						<artifactId>maven-failsafe-plugin</artifactId>
-						<configuration>
-							<argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
-							</argLine>
-							<!-- Specific to generate mapping between tests and covered code -->
-							<properties>
-								<property>
-									<name>listener</name>
-									<value>org.sonar.java.jacoco.JUnitListener</value>
-								</property>
-							</properties>
-							<!-- Let's put failsafe reports with surefire to have access to tests 
-								failures/success reports in sonar -->
-							<reportsDirectory>${project.build.directory}/surefire-reports
-							</reportsDirectory>
-						</configuration>
-					</plugin>
 					<plugin>
 						<groupId>org.jacoco</groupId>
 						<artifactId>jacoco-maven-plugin</artifactId>
-						<version>${jacoco.version}</version>
+						<version>0.7.10-SNAPSHOT</version>
 						<executions>
-							<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
-								to be passed to the JVM hosting the code being tested. -->
 							<execution>
-								<id>prepare-ut-agent</id>
-								<phase>process-test-classes</phase>
+								<id>default-prepare-agent</id>
 								<goals>
 									<goal>prepare-agent</goal>
 								</goals>
-								<configuration>
-									<destFile>${sonar.jacoco.reportPath}</destFile>
-									<propertyName>jacoco.agent.ut.arg</propertyName>
-									<append>true</append>
-								</configuration>
 							</execution>
-							<!-- Prepares a variable, jacoco.agent.it.arg, that contains the info 
-								to be passed to the JVM hosting the code being tested. -->
 							<execution>
-								<id>prepare-it-agent</id>
-								<phase>pre-integration-test</phase>
+								<id>default-report</id>
+								<phase>prepare-package</phase>
 								<goals>
-									<goal>prepare-agent</goal>
+									<goal>report</goal>
+								</goals>
+							</execution>
+							<execution>
+								<id>default-check</id>
+								<goals>
+									<goal>check</goal>
 								</goals>
 								<configuration>
-									<destFile>${sonar.jacoco.itReportPath}</destFile>
-									<propertyName>jacoco.agent.it.arg</propertyName>
-									<append>true</append>
+								<rules>
+									<!--  implementation is needed only for Maven 2  -->
+									<rule implementation="org.jacoco.maven.RuleConfiguration">
+										<element>BUNDLE</element>
+										<limits>
+										<!--  implementation is needed only for Maven 2  -->
+											<limit implementation="org.jacoco.report.check.Limit">
+												<counter>COMPLEXITY</counter>
+												<value>COVEREDRATIO</value>
+												<minimum>0.60</minimum>
+											</limit>
+										</limits>
+									</rule>
+								</rules>
 								</configuration>
 							</execution>
 						</executions>
 					</plugin>
 				</plugins>
 			</build>
-			<dependencies>
-				<dependency>
-					<groupId>org.codehaus.sonar-plugins.java</groupId>
-					<artifactId>sonar-jacoco-listeners</artifactId>
-					<version>${sonar-jacoco-listeners.version}</version>
-					<scope>test</scope>
-				</dependency>
-			</dependencies>
 		</profile>
 	</profiles>
-
 
 	<build>
 		<plugins>
@@ -404,26 +335,7 @@
 						</resource>
 					</resources>
 				</configuration>
-			</plugin>
-			<plugin>
-				<groupId>org.jacoco</groupId>
-				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.8</version>
-				<executions>
-					<execution>
-						<goals>
-							<goal>prepare-agent</goal>
-						</goals>
-					</execution>
-					<execution>
-						<id>report</id>
-						<phase>test</phase>
-						<goals>
-							<goal>report</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+			</plugin>			
 		</plugins>
 	</build>
 
